--- a/style.css
+++ b/style.css
@@ -41,15 +41,15 @@ body{
 .links{
     width: 30%;
 }
-ul{
+.nav-section ul{
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-li{
+.nav-section li{
     list-style: none;
 }
-ul li a{
+.nav-section ul li a{
     text-decoration: none;
     font-weight: 600;
 }
@@ -314,6 +314,78 @@ ul li a{
 }
 
 
+/* footer-section */
+footer{
+    height: 400px;
+    color: white;
+    background-color: rgb(1, 172, 253);
+}
+.footer-section{
+    width: 1200px;
+    height: 260px;
+    margin: 0 auto;
+    padding: 70px 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+footer .section-1-logo img{
+    height: 70px;
+    margin-right: 10px;
+}
+footer .section-1-logo .title{
+    font-size: 1.8rem;
+    font-weight: 700;
+}
+footer .section-1-logo{
+    display: flex;
+    justify-content: flex-start;
+}
+footer .footer-section-1{
+    width: 30%;
+    height: 160px ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+footer .footer-section-1 p{
+    margin-left: 10px;
+}
+footer .footer-section-2{
+    width: 18%;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer-section-2 p{
+    font-weight: 600;
+}
+.footer-section-2 ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 120px;
+}
+.footer-section-2 li{
+    list-style: none;
+}
+.footer-section-2 ul li a{
+    color: white;
+    text-decoration: none;
+}
+.footer-section-3{
+    height: 160px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.footer-section-3 p{
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-bottom: 20px;
+}
 
 
 /* media-query  for mobile screen*/
@@ -429,4 +501,86 @@ ul li a{
         padding: 20px;
         font-size: 0.25 rem;
     }
+
+
+
+    /* footer-section */
+    footer{
+        height: 800px;
+        color: white;
+        background-color: rgb(1, 172, 253);
+    }
+    .footer-section{
+        width: 500px;
+        height: 600px;
+        margin: 0 auto;
+        padding: 100px 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    footer .section-1-logo img{
+        height: 70px;
+        margin-right: 10px;
+    }
+    footer .section-1-logo .title{
+        font-size: 2rem;
+        font-weight: 700;
+        line-height: 35px;
+    }
+    footer .section-1-logo{
+        display: flex;
+        justify-content: flex-start;
+    }
+    footer .footer-section-1{
+        height: 180px ;
+        width: 300px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    footer .footer-section-1 p{
+        margin-left: 10px;
+        line-height: 25px;
+    }
+    footer .footer-section-2{
+        width: 300px;
+        height: 150px;
+        margin-left: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    
+    .footer-section-2 p{
+        font-weight: 600;
+        font-size: 1.1rem;
+    }
+    .footer-section-2 ul{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 120px;
+    }
+    .footer-section-2 li{
+        list-style: none;
+    }
+    .footer-section-2 ul li a{
+        color: white;
+        text-decoration: none;
+    }
+    .footer-section-3{
+        margin-left: 10px;
+        height: 160px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .footer-section-3 p{
+        font-weight: 600;
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+    }
+    
 }
